# Take-U-Forward-DSA

./: .gitignore  CLAUDE.md  README.md  helloworld.py  index.html  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy-pages.yml
Striver's A2Z Sheet/: CLAUDE.md  index.html  sync_notes.py
Striver's SDE Sheet/: .fetch_questions.py  .sde-urls.json  .wire_plan.py  CLAUDE.md  index.html  sync_notes.py
Striver's SDE Sheet/Arrays/: kadanesAlgorithm.py  nextPermutation.py  pascalsTriangleI.py  setMatrixZeroes.py  sortAnArrayOfZerosOnesAndTwos.py  stockBuyAndSell.py
Striver's SDE Sheet/Arrays Part-II/: findTheDuplicateNumber.py  findTheRepeatingAndMissingNumber.py  inversionOfArrayPreReqMergeSort.py  mergeOverlappingSubintervals.py  mergeTwoSortedArraysWithoutExtraSpace.py  rotateMatrixByNineZeroDegrees.py
Striver's SDE Sheet/Arrays Part-III/: gridUniquePaths.py  majorityElementI.py  majorityElementII.py  powXN.py  reversePairs.py  searchInATwoDMatrix.py
Striver's SDE Sheet/Arrays Part-IV/: countSubarraysWithGivenXorK.py  fourSum.py  largestSubarrayWithKSum.py  longestConsecutiveSequenceInAnArray.py  longestSubstringWithoutRepeatingCharacters.py  twoSum.py
Striver's SDE Sheet/Binary Search Tree/: checkIfATreeIsABSTOrNot.py  constructABSTFromAPreorderTraversal.py  lCAInBST.py  (+4 more)
Striver's SDE Sheet/Binary Search Tree Part-II/: bSTIterator.py  ceilInABST.py  findKThSmallestElementInBST.py  floorInABST.py  kthSmallestAndLargestElementInBST.py  serializeAndDeSerializeBT.py  sizeOfTheLargestBSTInABinaryTree.py  twoSumInBST.py
docs/: DP_PATTERNS.md
(+827 files in other folders)
