[project]
name = "striver-sde-sheet"
version = "0.1.0"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "N",    # pep8-naming
  "ANN",  # type annotations
  "RET",  # return statements
  "SIM",  # simplifications
]
ignore = [
  "ANN101",  # missing type for self
  "ANN102",  # missing type for cls
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.messages_control]
disable = ["C0200"]  # consider-using-enumerate — index access is intentional in DSA

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
